[workspace]
members = ["transaction","payment-engine"]
resolver = "2"

[workspace.package]
authors = ["Yoann Lambert <yoann.lambert@proton.me>"]
edition = "2021"
rust-version = "1.83"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]

# Workspace members
transaction = { path = "./transaction" }
