[workspace]
members = ["transaction","payment-engine"]
resolver = "2"

[workspace.package]
authors = ["Yoann Lambert <yoann.lambert@proton.me>"]
edition = "2021"
rust-version = "1.83"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
csv-async = { version = "1.3", features = ["tokio"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = "1.41"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-test = "0.2"

# Workspace members
transaction = { path = "./transaction" }
