[package]
name = "payment-engine"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap = { workspace = true, features = ["wrap_help"] } # "env"
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Workspace dependencies
transaction.workspace = true

[dev-dependencies]
