[package]
name = "transaction"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["io-std", "io-util"] } # "macros", "fs", "rt", "sync", "time"

[dev-dependencies]
