[package]
name = "transaction"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv-async.workspace = true
futures.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-std", "io-util"] } # "macros", "rt", "sync", "time"
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-test.workspace = true
